deleted mistakes and add new files

--- a/about-us.html
+++ b/about-us.html
@@ -97,29 +97,29 @@
                     <div class="section-wrapper info" >
                         <div class="info__paragraphs">
                             <div class="par-group">
-                                <p class="par"> Ми - українська архітектурна компанія <span> "Архітектурно-проєктна група Анни Кирій" </span> з Києва. Наша компанія була заснована в 2008 році. </p>
-                                <p class="par"> Ми маємо понад 14 років досвіду в архітектурному проєктуванні повного циклу. Ми працюємо з реальним сектором, комерційними компаніями, фондами, міжнародними, муніципальними та державними організаціями в якості Генерального проєктувальника та створюємо для наших клієнтів усі види проєктної документації. У своїх архітектурних рішеннях наша компанія керується принципами сучасної архітектури. Наша команда завжди знаходить і пропонує найкраще рішення, яке покращує бізнес наших клієнтів і вирішує їх бізнес-завдання. </p>
-                                <p class="par"> <span>Наша глобальна мета – робити проєкти, які розбудовують Україну.</span> Наша місія – відкрита до світу Україна, яка може пишатися естетикою свого простору та сучасними проривними рішеннями в архітектурі. </p>
+                                <p class="par"> Українська компанія <span> "Архітектурно-проєктна група Анни Кирій" </span> з Києва, заснована у 2008 році. </p>
+                                <p class="par"> Ми маємо понад 14 років досвіду в архітектурному проєктуванні повного циклу. Наші клієнти - комерційні компанії, фонди, міжнародні, муніципальні та державні організації. Ми створюємо для них усі види проєктної документації в якості Генерального проєктувальника. <br>У своїх архітектурних рішеннях наша компанія керується принципами сучасної архітектури. Наша команда завжди знаходить і пропонує найкраще рішення, яке покращує бізнес наших клієнтів і вирішує їх бізнес-завдання. </p>
+                                <p class="par"> <span>Наша глобальна мета </span> – робити проєкти, які розбудовують Україну. <br> <span>Наша місія </span> – відкрита до світу Україна, яка може пишатися естетикою свого простору та сучасними проривними рішеннями в архітектурі. </p>
                             </div> 
                             <div class="par-group">
                                 <p class="par"><span> Компанія спеціалізується </span> на розробці наступних видів робіт:</p>
                                 <p class="par"> - консультації з будь-яких питань, пов'язаних з процесом проєктування та розробки об'єктів архітектури;</p>
                                 <p class="par"> - розробка концепцій з аналізом граничних параметрів будівлі та карти ризиків; </p>
                                 <p class="par"> - пошук найкращих архітектурних та інженерних рішень поставленого завдання;</p>
-                                <p class="par"> - створення проєктної документації: Передпроєкт, Ескізний Проєкт, Проєкт, Робочий Проєкт та Робоча Документація;</p>
+                                <p class="par"> - розробка всіх стадій проєктування: Передпроєктні пропозиції, Ескізний проєкт, Проєкт, Робочий проєкт та Робоча документація;</p>
                                 <p class="par"> - авторський нагляд за будівництвом.</p>
-                                <p class="par"> Наша головна майстерність - створювати об'єкти від ідеї до реалізації</p>
+                                <p class="par"> <span> Наша головна майстерність </span>- створювати об'єкти від ідеї до реалізації</p>
                             </div>
                             <div class="par-group">
-                                <p class="par"> <span> Перелік проєктів, розроблених нашою компанією, переважає понад 260 </span> у таких категоріях: громадські будівлі, житло, офісні будівлі та бізнес-центри, багатофункціональні комплекси, охорона здоров'я, школи, дитячі садки, центри дозвілля, котеджні містечка, інтер'єри громадських просторів</p>
+                                <p class="par"><span>Кількість проєктів</span>, яка розроблена нашими фахівцями за час існування компанії <span>складає понад 260</span> у категоріях: громадські будівлі, житлові будинки, заклади медицини, офісні будівлі та бізнес-центри, багатофункціональні комплекси, школи, дитячі садочки, ЦНАПи, центри дозвілля, котеджні містечка, інтер’єри громадських просторів.</p>
                             </div>
                             <div class="par-group">
                                 <p class="par"><span> Що ми не робимо </span></p>
-                                <p class="par"> З питань дизайну інтер'єру приватних будинків і квартир, краще звертатися в іншу компанію. Ми будемо раді надати рекомендації. Наші фахівці орієнтовані на вирішення бізнес-завдань. </p>
+                                <p class="par"> З питань дизайну інтер'єру приватних будинків і квартир, краще звертатися в іншу компанію, проте ми будемо раді надати рекомендації. Наші фахівці орієнтовані на вирішення бізнес-завдань. </p>
                             </div>                            
                             <div class="par-group">
                                 <p class="par"><span>Команда</span></p>
-                                <p class="par"> Всі співробітники компанії - талановиті особистості та висококваліфіковані фахівці своєї справи. Це архітектори з кваліфікаційними сертифікатами, дизайнери та менеджери. Компанія тісно співпрацює з фахівцями та організаціями інженерних спеціальностей, залучаючи їх до розробки проєктної документації в якості субпідрядників. Ми пишаємося командою, яка здатна створювати та реалізовувати масштабні та важливі для України проєкти.</p>
+                                <p class="par"> Всі співробітники компанії є талановитими особистостями та фахівцями високого рівня у своїй галузі. Це архітектори, дизайнери, конструктори та менеджери. Вони мають відповідні кваліфікаційні сертифікати. <br>Компанія тісно співпрацює із спеціалістами та організаціями інженерних спеціальностей, залучаючи їх до розробки проєктної документації в якості субпідрядників. <span><br>Ми пишаємося командою, яка здатна створювати та реалізовувати масштабні та важливі для України проєкти.</span></p>
                             </div>
                         </div>
                     </div>
