--- a/all-projects.html
+++ b/all-projects.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Anna Kyrii Architectural Projecting Group">
     <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
     <meta name="author" content="Anna Kyrii Architectural Projecting Group">
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
     <link rel="stylesheet" href="assets/style/normalize.css">
     <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/style_about-us.css"> 
