--- a/contacts.html
+++ b/contacts.html
@@ -74,23 +74,23 @@
                         <div class="contacts__container">
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Консультація з будь-яких питань </p>
-                                    <p class="additional-text">пов'язані з процесом проєктування та розробки об'єктів архітектури </p>
+                                    <p class="main-text"> Консультація з будь-яких питань 
+                                    <p class="additional-text"> пов'язаних з процесом проєктування та розробки об'єктів архітектури 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Розробка концепцій </p>
-                                    <p class="additional-text"> з аналізом граничних параметрів забудови та карти ризиків </p>
+                                    <p class="main-text"> Розробка концепцій 
+                                    <p class="additional-text"> з аналізом граничних параметрів забудови та карти ризиків 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Проєктна документація </p>
-                                    <p class="additional-text"> Пошук найкращих архітектурних та інженерних рішень для поставленого завдання </p>
+                                    <p class="main-text"> Розробка проєктних рішень 
+                                    <p class="additional-text"> з пошуком найкращих архітектурних та інженерних рішень для поставленого завдання
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Проєктна документація </p>
-                                    <p class="additional-text"> Передпроєктні Пропозиції, Ескізний Проєкт, Робочий Проєкт та Робоча Документація </p>
+                                    <p class="main-text"> Розробка всіх стадій проєктування 
+                                    <p class="additional-text"> Передпроєктні пропозиції, Ескізний проєкт, Проєкт, Робочий проєкт та Робоча документація
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Авторський нагляд за будівництвом </p>
+                                    <p class="main-text"> Проведення авторського нагляду за будівництвом
                                 </div>
                             </div>
                             <div class="contacts__place-a-meeting">
