--- a/en/contacts.html
+++ b/en/contacts.html
@@ -74,23 +74,24 @@
                         <div class="contacts__container">
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Consulting on any issues </p>
-                                    <p class="additional-text"> related to the process of design and development of architectural objects </p>
+                                    <p class="main-text"> Consulting on any issues 
+                                    <p class="additional-text"> related to the process of design and development of architectural objects 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Development of concepts </p>
-                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map </p>
+                                    <p class="main-text"> Development of concepts 
+                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task</p>
+                                    <p class="main-text"> Development of project solutions 
+                                    <p class="additional-text">
+                                        with finding the best architectural and engineering solutions for the given task
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation </p>
+                                    <p class="main-text"> Development of all stages of design 
+                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Author's supervision of construction </p>
+                                    <p class="main-text"> Author's supervision of construction 
                                 </div>
                             </div>
                             <div class="contacts__place-a-meeting">
