--- a/en/index.html
+++ b/en/index.html
@@ -242,11 +242,12 @@
                                     <p class="additional-text"> with the analysis of limit parameters of building and risk-map 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation 
-                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task
+                                    <p class="main-text"> Development of project solutions 
+                                    <p class="additional-text">
+                                        with finding the best architectural and engineering solutions for the given task
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation 
+                                    <p class="main-text"> Development of all stages of design 
                                     <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation 
                                 </div>
                                 <div class="contacts__what-we-do-text">
